# hamr-read

./: .gitignore  README.md  convert.py  functions.c  pp.py  pp_c.c  pp_c.pyx  pyproject.toml  setup.py
hamr_read/: __init__.py  convert.py  pp.py  read.py
