[build-system]
requires = ["setuptools>=64", "Cython>=3.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "hamr_read"
version = "0.1.0"
description = "Python bindings for reading and processing HARM GRMHD simulation data"
requires-python = ">=3.8"
dependencies = ["numpy", "xarray"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hamr_read*"]
